manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: my-namespace1
  labels:
    name: my-namespace1
